# rules_proto_grpc

./: BUILD.bazel  Makefile  repositories.bzl
android/: BUILD.bazel
buf/: BUILD.bazel
buf/example/: BUILD.bazel
c/: BUILD.bazel
cpp/: BUILD.bazel
csharp/: BUILD.bazel
csharp/nuget/: BUILD.bazel
d/: BUILD.bazel
doc/: BUILD.bazel
example/proto/: BUILD.bazel
example/routeguide/: BUILD.bazel
fsharp/: BUILD.bazel
fsharp/nuget/: BUILD.bazel
go/: BUILD.bazel
grpc-gateway/: BUILD.bazel
internal/: BUILD.bazel
java/: BUILD.bazel
js/: BUILD.bazel
js/requirements/: package.json
objc/: BUILD.bazel
php/: BUILD.bazel
protobuf/: BUILD.bazel
python/: BUILD.bazel
python/grpclib/: BUILD.bazel
ruby/: BUILD.bazel
rust/: BUILD.bazel
rust/raze/: BUILD.bazel
scala/: BUILD.bazel
swift/: BUILD.bazel
test_workspaces/absolute_strip_import_prefix/: BUILD.bazel
test_workspaces/combined_strip_and_add_prefix/: BUILD.bazel
test_workspaces/common_cpp_library/: BUILD.bazel
test_workspaces/empty_output_directory/: BUILD.bazel
test_workspaces/exclusions/: BUILD.bazel
test_workspaces/generated_proto/: BUILD.bazel
test_workspaces/go_fixer/: BUILD.bazel
test_workspaces/go_importpath/: BUILD.bazel
test_workspaces/import_prefix/: BUILD.bazel
test_workspaces/objc_capitalisation/: BUILD.bazel
test_workspaces/python3_grpc/: BUILD.bazel
test_workspaces/python_dashes/: BUILD.bazel
test_workspaces/python_deps/: BUILD.bazel
test_workspaces/readme_http_archive/: BUILD.bazel
tools/: BUILD.bazel
tools/fixer/: BUILD.bazel
(+5 files in other folders)
